# ecommerce-elt-pipeline

./: .env  .gitignore  Pipfile  README.md  bucket  dev_test_ingestion.py  energy_invalid.csv  energy_valid.csv  exercise.ipynb  helper.txt  logs.csv  my_module.py  mypy.ini  pyproject.toml  pytest.ini  raw_files.py  requirements.txt  ruff.toml  sales.csv  test_clean_amount.py  unit_test.ipynb
.github/workflows/: dbt.yml  tests.yml
.tmp_dagster_home_h960itw8/history/: runs.db
.tmp_dagster_home_h960itw8/history/runs/: .db  afc0449a-f553-4e77-9c2f-318b690ac8ee.db  index.db
.tmp_dagster_home_h960itw8/schedules/: schedules.db
.tmp_dagster_home_h960itw8/storage/run_ecommerce_ingestion/: 2025-11-13
docs/: case_study.md
ecommerce_analytics/: dbt_project.yml
ecommerce_analytics/macros/: clean_email.sql  clean_numeric.sql  clean_unknown.sql  custom_schema.sql  null_if_bad_country.sql
ecommerce_analytics/models/marts/: dim_customers.sql  dim_products.sql  fct_customer_orders.sql  fct_order_items.sql  fct_payments.sql
ecommerce_analytics/models/staging/: sources.yml  stg_customers.sql  stg_orders.sql  stg_orders_items.sql  stg_payments.sql  stg_products.sql
misc/: helper.txt  unit_test.py  working_book.ipynb
notebooks/: queries.ipynb
orchestration/: definitions.py  pyproject.toml
orchestration/assets/: dbt_run.py  extract.py
src/: generator.py  utils.py
src/batch_data_pipeline/: main_runner.py
src/batch_data_pipeline/validation/: helpers.py
src/ingestion/: file_finder.py  gcs_loader.py  generator.py  pipeline.py
src/validation/: __init__.py  customer.py  helpers.py  validators.py
test/: conftest.py  test_file_finder.py  test_gcs_loader.py  test_generator.py  test_pipeline.py
tests/legacy/: test_file_finder.py  test_pipeline.py
tests/validation/: conftest.py  test_customer_ingestion.py  test_customer_schema.py  test_validate_records.py
(+37 files in other folders)
