[tool.poetry]
name = "batch-data-pipeline"
version = "0.1.0"
description = "Batch data ingestion and processing pipeline."
authors = ["Teedot19 <taiwo_dotun@yahoo.com>"]
readme = "README.md"
packages = [
    { include = "ingestion", from = "src" },
    { include = "orchestration", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-core = "^1.9.0"  # â† Changed from "dbt"
pandas = "^2.2.3"
dagster = "^1.9.8"
dagster-webserver = "^1.9.8"
dbt-snowflake = "^1.9.2"
python-dotenv = "^1.0.1"
faker = "^38.0.0"
faker-commerce = "^1.0.4"
google-cloud-storage = "^3.5.0"
dagster-dbt = "^0.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "orchestration.definitions"